Started algorithms and started hashtable
- Added some basic recursion examples
- Added some divide and conquer
   -Naive Square Matrix Multiplication
   -Merge Sort
   -Find Maximum Subarray

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,15 @@
 {
     "files.associations": {
         "string": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "functional": "cpp",
+        "ostream": "cpp",
+        "limits": "cpp",
+        "tuple": "cpp",
+        "random": "cpp",
+        "array": "cpp",
+        "utility": "cpp",
+        "variant": "cpp",
+        "new": "cpp"
     }
 }
